Bug 170033 - All filtering criteria are not localized in filter dialog
Summary: All filtering criteria are not localized in filter dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-08-29 14:50 UTC by Nicolas Ternisien
Modified: 2008-09-04 16:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch which _should_ fixes this problem (1.58 KB, patch)
2008-08-29 14:52 UTC, Nicolas Ternisien
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Ternisien 2008-08-29 14:50:37 UTC
Version:            (using KDE 4.1.1)
OS:                Linux
Installed from:    Compiled From Sources

Some of filtering criteria are not translated to other locale than English, which is annoying for KDE translations of KMail.

To reproduce this bug : 
1/ Open KMail
2/ Use "Configure filters"
3/ Look at the first list box (which allows to search by Subject, Message,...)

Those non-translated terms are really important because we have : "Subject", "From", "To, "CC", ...
Comment 1 Nicolas Ternisien 2008-08-29 14:52:56 UTC
Created attachment 27125 [details]
Patch which _should_ fixes this problem

Please test it before applying it, I've not even compile it...
Comment 2 Thomas McGuire 2008-08-29 14:59:33 UTC
Well the problem here is that those fields refer to header names in the mail source, right-click a message in the reader window and choose "View Source" to see what I mean. The header names are always English, and I think translating them would be a mistake.
Comment 3 Nicolas Ternisien 2008-08-29 15:03:26 UTC
I know that those fields are referring the header of the mail, but I think that :

- Someone who is not English friendly simply don't understand what those terms mean
- Even if he understands English, he does not want to know that KMail _internally_ checks those Headers, but only wants to "apply a filter on the subject of its mail", so he could not understand why it is not translated.
Comment 4 Thomas McGuire 2008-09-04 15:59:17 UTC
   
SVN commit 856802 by tmcguire:

Allow translating some of the filter critera for headers, namely
subject, to, from and cc.

I've left the other ones untouched as I think those a raw header fields
and shouldn't be translated.
Topic open for bikeshedding though :)

BUG: 170033
Comment 5 Nicolas Ternisien 2008-09-04 16:01:37 UTC
Thank you ! (I know that this comment is useless, but thanks again)