Allow translating some of the filter critera for headers, namely subject, to, from and cc.

I've left the other ones untouched as I think those a raw header fields
and shouldn't be translated.
Topic open for bikeshedding though :)

BUG: 170033

svn path=/trunk/KDE/kdepim/; revision=856802