kmsearchpatternedit.h
@@ -56,7 +56,8 @@ public:
       be used to initialize the widget. */
   explicit KMSearchRuleWidget( QWidget* parent=0, KMSearchRule* aRule=0, bool headersOnly = false, bool absoluteDates = false );
 
-  enum { Message, Body, AnyHeader, Recipients, Size, AgeInDays, Status };
+  enum { Message, Body, AnyHeader, Recipients, Size, AgeInDays, Status,
+         Subject, From, To, CC };
 
   /** Set whether only header fields can be searched. If @p is true only
       header fields can be searched otherwise \<message\> and \<body\> searches
